# test_jenkins

./: .dockerignore  Dockerfile  Jenkinsfile  jenkinsfile  pyproject.toml
infra/: docker-compose.yaml
infra/jenkins/: Dockerfile  entrypoint.sh
src/: main.py
src/app/: funny_monkey.py
tests/: test_main.py
