[tool.poetry]
name = "test-project"
version = "0.1.0"
description = ""
authors = ["artem <artem2004920@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.4.1"
ruff = "^0.12.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
pythonpath = "src"


[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"]
ignore = []
exclude = [
    ".git",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache"
]

